<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_height="wrap_content">
    <LinearLayout
        android:id="@+id/ln_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/ln_stats"
        android:layout_weight="10"
        android:layout_width="0dp"
        android:layout_height="wrap_content">
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/image_standing"
            android:layout_width="39dp"
            android:layout_height="39dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"
            tools:src="@tools:sample/avatars"/>
        <TextView
            android:id="@+id/name_standing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:maxLines="2"
            android:fontFamily="@font/poppins_medium"
            android:layout_marginStart="10dp"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            style="@style/FontColor"
            android:text="@string/madura_united"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ln_stats"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/ln_name"
        android:orientation="horizontal"
        android:weightSum="70"
        android:layout_gravity="center"
        android:layout_width="0dp"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/gp_standing"
            android:layout_width="wrap_content"
            style="@style/FontColor"
            android:layout_marginTop="10dp"
            android:layout_weight="10"
            android:fontFamily="@font/poppins_medium"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content"
            android:text="@string/gp"
            tools:ignore="NestedWeights" />
        <TextView
            android:id="@+id/w_standing"
            android:layout_width="wrap_content"
            style="@style/FontColor"
            android:layout_weight="10"
            android:fontFamily="@font/poppins_medium"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content"
            android:text="@string/w" />
        <TextView
            android:id="@+id/d_standing"
            android:layout_weight="10"
            android:layout_width="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins_medium"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"
            style="@style/FontColor"
            android:layout_height="wrap_content"
            android:text="@string/d"/>

        <TextView
            android:id="@+id/l_standing"
            android:layout_width="wrap_content"
            style="@style/FontColor"
            android:layout_weight="10"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/poppins_medium"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content"
            android:text="@string/l" />
        <TextView
            android:id="@+id/gf_standing"
            android:layout_width="wrap_content"
            style="@style/FontColor"
            android:layout_weight="10"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins_medium"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content"
            android:text="@string/gf" />
        <TextView
            android:id="@+id/ga_standing"
            android:layout_width="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins_medium"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="10"
            style="@style/FontColor"
            android:layout_height="wrap_content"
            android:text="@string/ga"/>
        <TextView
            android:id="@+id/ga_rank"
            android:layout_width="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins_medium"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="10"
            style="@style/FontColor"
            android:layout_height="wrap_content"
            android:text="@string/r"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>