<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    style="@style/BackgroundItem"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/season_year_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:paddingEnd="16dp"
        style="@style/FontColor"
        android:textSize="30sp"
        android:fontFamily="@font/poppins_bold"
        android:textStyle="italic"
        android:paddingStart="16dp"
        android:text="@string/_2022" />
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/season_name_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            style="@style/FontColor"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/name_season"
            app:layout_constraintBottom_toTopOf="@id/start_date_item"
            android:layout_margin="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
        <TextView
            android:id="@+id/start_date_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/start_date"
            style="@style/FontColor"
            android:fontFamily="@font/poppins_light"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
        <TextView
            android:id="@+id/end_date_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/end_date"
            style="@style/FontColor"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/poppins_light"
            app:layout_constraintTop_toTopOf="@id/start_date_item"
            app:layout_constraintStart_toEndOf="@id/start_date_item"
            app:layout_constraintBottom_toBottomOf="@id/start_date_item"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>