<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/black"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.standings.StandingsActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="124dp">
        <View
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/BackgroundCollapse"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_league_detail"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_margin="20dp"
            tools:src="@tools:sample/avatars"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/welcome"/>
        <TextView
            android:id="@+id/league_name_detail"
            android:layout_marginTop="5dp"
            android:layout_width="0dp"
            android:text="@string/name"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/poppins_bold"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/img_league_detail"
            app:layout_constraintTop_toTopOf="@id/img_league_detail"
            app:layout_constraintBottom_toBottomOf="@id/img_league_detail"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingStart="0dp"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/ln_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/ln_stats"
            android:layout_weight="10"
            android:layout_width="0dp"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/name_standing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:maxLines="2"
                android:fontFamily="@font/poppins_medium"
                android:layout_marginStart="10dp"
                android:gravity="center"
                android:layout_marginBottom="10dp"
                style="@style/FontColor"
                android:text="@string/club_name"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ln_stats"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/ln_name"
            android:orientation="horizontal"
            android:weightSum="60"
            android:layout_gravity="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/gp_standing"
                android:layout_width="wrap_content"
                style="@style/FontColor"
                android:layout_marginTop="10dp"
                android:layout_weight="10"
                android:gravity="center"
                android:fontFamily="@font/poppins_medium"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="10dp"
                android:layout_height="wrap_content"
                android:text="@string/gp"
                tools:ignore="NestedWeights" />
            <TextView
                android:id="@+id/w_standing"
                android:layout_width="wrap_content"
                style="@style/FontColor"
                android:layout_weight="10"
                android:gravity="center"
                android:fontFamily="@font/poppins_medium"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="10dp"
                android:layout_height="wrap_content"
                android:text="@string/w" />
            <TextView
                android:id="@+id/d_standing"
                android:layout_weight="10"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/poppins_medium"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="10dp"
                style="@style/FontColor"
                android:layout_height="wrap_content"
                android:text="@string/d"/>

            <TextView
                android:id="@+id/l_standing"
                android:layout_width="wrap_content"
                style="@style/FontColor"
                android:layout_weight="10"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/poppins_medium"
                android:layout_marginBottom="10dp"
                android:layout_height="wrap_content"
                android:text="@string/l" />
            <TextView
                android:id="@+id/gf_standing"
                android:layout_width="wrap_content"
                style="@style/FontColor"
                android:layout_weight="10"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/poppins_medium"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="10dp"
                android:layout_height="wrap_content"
                android:text="@string/gf" />
            <TextView
                android:id="@+id/ga_standing"
                android:layout_width="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/poppins_medium"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="10"
                android:gravity="center"
                style="@style/FontColor"
                android:layout_height="wrap_content"
                android:text="@string/ga"/>
            <TextView
                android:id="@+id/ga_rank"
                android:layout_width="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/poppins_medium"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="10"
                android:gravity="center"
                style="@style/FontColor"
                android:layout_height="wrap_content"
                android:text="@string/r"/>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_standings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/item_standings_league" />

</LinearLayout>